--- a/SCADAAggregator/packages.config
+++ b/SCADAAggregator/packages.config
@@ -3,6 +3,7 @@
   <package id="Common.Logging" version="3.3.0" targetFramework="net461" />
   <package id="Common.Logging.Core" version="3.3.0" targetFramework="net461" />
   <package id="CsvHelper" version="12.1.2" targetFramework="net461" />
+  <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
   <package id="TitaniumAS.Opc.Client" version="1.0.2.0" targetFramework="net461" />
 </packages>
