--- a/SCADAAggregator/log4net.config
+++ b/SCADAAggregator/log4net.config
@@ -10,7 +10,7 @@
     </layout>
   </appender>
   <appender name="file" type="log4net.Appender.RollingFileAppender">
-    <file value="SCADAAggregator.log" />
+    <file value="OPCScanner.log" />
     <appendToFile value="true" />
     <rollingStyle value="Size" />
     <maxSizeRollBackups value="5" />
