--- a/SCADAAggregator/packages.config
+++ b/SCADAAggregator/packages.config
@@ -1,9 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Common.Logging" version="3.3.0" targetFramework="net461" />
-  <package id="Common.Logging.Core" version="3.3.0" targetFramework="net461" />
-  <package id="CsvHelper" version="12.1.2" targetFramework="net461" />
-  <package id="log4net" version="2.0.8" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
+  <package id="Common.Logging" version="3.4.1" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net45" />
+  <package id="CsvHelper" version="27.2.1" targetFramework="net45" />
+  <package id="log4net" version="2.0.13" targetFramework="net45" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net45" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net45" />
+  <package id="System.Memory" version="4.5.0" targetFramework="net45" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net45" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net45" />
   <package id="TitaniumAS.Opc.Client" version="1.0.2.0" targetFramework="net461" />
 </packages>
